Generify ChineseWord to Word,